margin corrections and gap added

--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -1105,6 +1105,8 @@ footer {
 
   .box-container {
     display: flex;
+    gap:5px;
+    margin:0 180px;
   }
 
   .section-3-title {
